# demo

./: .dockerignore  .env.example  .gitignore  HANDOFF.md  README.md  package-lock.json  package.json  run-copilot.sh
apps/ai-copilot/: Dockerfile  Dockerfile.migrate  package.json
apps/ai-copilot/public/: chat-demo.html
apps/ai-copilot/scripts/: migrate-entrypoint.sh  test-e2e.sh
apps/ai-copilot/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/ai-copilot/test/: jest-e2e.json  rrf.spec.ts  (+3 more)
apps/embedding-worker/: Dockerfile  README.md  pyproject.toml
apps/embedding-worker/src/: config.py  db.py  embed.py  embedder.py  health.py  main.py  state.py  worker.py
apps/embedding-worker/tests/: test_embedder.py  test_format_vector.py
apps/knowledge-ingestion/: Dockerfile  package.json
nexa-eval-sandbox/: README.md  RING-FENCE.md
nexa-eval-sandbox/harness/: API-CONTRACT.md  config.json  last-scorecard.json  mock-copilot.mjs  scorecard.mjs
nexa-eval-sandbox/prompts/: PROMPT-SCHEMA.md  prompt_set.jsonl
nexa-eval-sandbox/synthbank/: cis.json  copilot-map.sql  derived_facts.json  generate.py  schema.sql  seed.sql  service_aliases.csv  services.json
nexa-eval-sandbox/templates/: FAILURE-CLASSIFICATION-STAGE1-PANKAJ.md  GAP-LOG-STAGE1-PANKAJ.md  GAP-LOG.md  SCORECARD-REPORT.md
packs/banking/: README.md  cmdb-mappings.yaml  glossary.yaml  pack.yaml  severity-rules.yaml  sop-categories.yaml  value-model.yaml
packs/default/: README.md  cmdb-mappings.yaml  glossary.yaml  pack.yaml  severity-rules.yaml  sop-categories.yaml  value-model.yaml
(+252 files in other folders)
